fixed issue with button text being off center when window was narrow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,7 @@ body {
 .frontbutton{
 	width: 100%;
 	padding: 50px;
+	text-align: center;
 }
 
 .frontbuttonslist{
@@ -2730,7 +2731,7 @@ input, select, textarea {
 		height: 2.75em;
 		letter-spacing: 0.125em;
 		line-height: 2.75em;
-		padding: 0 2em;
+		padding: 0;
 		text-align: center;
 		text-decoration: none;
 		text-indent: 0.125em;
@@ -3461,7 +3462,8 @@ input, select, textarea {
 			input[type="reset"],
 			input[type="button"],
 			.button {
-				padding: 0;
+				padding: 0px;
+				padding: 0em;
 			}
 
 		/* Main */
